# VisionGuard-AI

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: api.py  ui.py
configs/: config.yaml  model_card.md
notebooks/: inference_demo.ipynb
reports/: latest.json  latest.md  report.aux  report.out  report.tex
src/: __init__.py  config.py
src/models/: __init__.py  sam_helper.py  segformer.py
src/training/: __init__.py  eval.py  train.py
src/utils/: __init__.py  benchmark.py  explainability.py  logger.py  onnx_export.py  report_generator.py
tests/: __init__.py  test_api.py  test_dataset.py  test_models.py
